packages/dart_edge_webtransport/lib/src/platform/webtransport_native_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:dart_edge_webtransport/dart_edge_webtransport.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Int64, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> dart_edge_webtransport_close(
  int handle,
  int code,
  ffi.Pointer<ffi.Char> reason,
);

@ffi.Native<
  ffi.Pointer<NativeWebTransportConnectResult> Function(
    ffi.Pointer<NativeWebTransportConnectConfig>,
  )
>()
external ffi.Pointer<NativeWebTransportConnectResult>
dart_edge_webtransport_connect(
  ffi.Pointer<NativeWebTransportConnectConfig> config,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_webtransport_dispose(int handle);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeWebTransportBytesResult>)>(
  isLeaf: true,
)
external void dart_edge_webtransport_free_bytes_result(
  ffi.Pointer<NativeWebTransportBytesResult> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeWebTransportConnectResult>)>(
  isLeaf: true,
)
external void dart_edge_webtransport_free_connect_result(
  ffi.Pointer<NativeWebTransportConnectResult> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeWebTransportOperation>)>(
  isLeaf: true,
)
external void dart_edge_webtransport_free_operation(
  ffi.Pointer<NativeWebTransportOperation> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeWebTransportStreamChunk>)>(
  isLeaf: true,
)
external void dart_edge_webtransport_free_stream_chunk(
  ffi.Pointer<NativeWebTransportStreamChunk> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeWebTransportStreamInfo>)>(
  isLeaf: true,
)
external void dart_edge_webtransport_free_stream_info(
  ffi.Pointer<NativeWebTransportStreamInfo> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeWebTransportStreamTerminal>)>(
  isLeaf: true,
)
external void dart_edge_webtransport_free_stream_terminal(
  ffi.Pointer<NativeWebTransportStreamTerminal> value,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external void dart_edge_webtransport_free_string(ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Int64 Function()>(isLeaf: true)
external int dart_edge_webtransport_native_abi_version();

@ffi.Native<ffi.Int64 Function(ffi.Int64, ffi.Int64, ffi.Bool)>()
external int dart_edge_webtransport_open_bidirectional_stream(
  int session_id,
  int send_order,
  bool has_send_order,
);

@ffi.Native<ffi.Int64 Function(ffi.Int64, ffi.Int64, ffi.Bool)>()
external int dart_edge_webtransport_open_unidirectional_stream(
  int session_id,
  int send_order,
  bool has_send_order,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Int64, ffi.Pointer<ffi.Uint8>, ffi.Int64)
>()
external ffi.Pointer<ffi.Char> dart_edge_webtransport_send_datagram(
  int handle,
  ffi.Pointer<ffi.Uint8> bytes,
  int length,
);

@ffi.Native<ffi.Int64 Function(ffi.Int64)>()
external int dart_edge_webtransport_stream_finish(int stream_id);

@ffi.Native<ffi.Int64 Function(ffi.Int64, ffi.Uint32)>()
external int dart_edge_webtransport_stream_reset(int stream_id, int error_code);

@ffi.Native<ffi.Int64 Function(ffi.Int64, ffi.Uint32)>()
external int dart_edge_webtransport_stream_stop(int stream_id, int error_code);

@ffi.Native<ffi.Int64 Function(ffi.Int64, ffi.Pointer<ffi.Uint8>, ffi.Int64)>()
external int dart_edge_webtransport_stream_write(
  int stream_id,
  ffi.Pointer<ffi.Uint8> bytes,
  int length,
);

@ffi.Native<ffi.Pointer<NativeWebTransportBytesResult> Function(ffi.Int64)>()
external ffi.Pointer<NativeWebTransportBytesResult>
dart_edge_webtransport_take_datagram(int handle);

@ffi.Native<ffi.Pointer<NativeWebTransportOperation> Function(ffi.Int64)>()
external ffi.Pointer<NativeWebTransportOperation>
dart_edge_webtransport_take_operation(int operation_id);

@ffi.Native<ffi.Pointer<NativeWebTransportStreamChunk> Function(ffi.Int64)>()
external ffi.Pointer<NativeWebTransportStreamChunk>
dart_edge_webtransport_take_stream_chunk(int stream_id);

@ffi.Native<ffi.Pointer<NativeWebTransportStreamInfo> Function(ffi.Int64)>()
external ffi.Pointer<NativeWebTransportStreamInfo>
dart_edge_webtransport_take_stream_info(int stream_id);

@ffi.Native<ffi.Pointer<NativeWebTransportStreamTerminal> Function(ffi.Int64)>()
external ffi.Pointer<NativeWebTransportStreamTerminal>
dart_edge_webtransport_take_stream_terminal(int stream_id);

final class NativeWebTransportBytesResult extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> bytes;

  @ffi.Int64()
  external int length;

  external ffi.Pointer<ffi.Char> error;
}

final class NativeWebTransportConnectConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> url;

  external ffi.Pointer<ffi.Char> headers_json;

  @ffi.Bool()
  external bool allow_self_signed;

  external dart_edge_webtransport_event_callback_t callback;
}

final class NativeWebTransportConnectResult extends ffi.Struct {
  @ffi.Int64()
  external int handle;

  external ffi.Pointer<ffi.Char> error;
}

final class NativeWebTransportOperation extends ffi.Struct {
  @ffi.Int64()
  external int operation_id;

  @ffi.Int64()
  external int session_id;

  @ffi.Int64()
  external int stream_id;

  @ffi.Int64()
  external int protocol_id;

  @ffi.Uint8()
  external int kind;

  @ffi.Bool()
  external bool succeeded;

  external ffi.Pointer<ffi.Char> error;
}

final class NativeWebTransportStreamChunk extends ffi.Struct {
  @ffi.Int64()
  external int stream_id;

  external ffi.Pointer<ffi.Uint8> bytes;

  @ffi.Int64()
  external int length;
}

final class NativeWebTransportStreamInfo extends ffi.Struct {
  @ffi.Int64()
  external int session_id;

  @ffi.Int64()
  external int stream_id;

  @ffi.Int64()
  external int protocol_id;

  @ffi.Uint8()
  external int kind;
}

final class NativeWebTransportStreamTerminal extends ffi.Struct {
  @ffi.Int64()
  external int stream_id;

  @ffi.Int64()
  external int error_code;

  external ffi.Pointer<ffi.Char> error;
}

typedef dart_edge_webtransport_event_callback_t =
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(ffi.Int32 event_kind, ffi.Int64 event_id)
      >
    >;
